2005-11-15  Elijah Newren  <newren@gmail.com>

	Update, fix, and extend all the documentation on constraints.

	* src/constraints-ideas.txt: Update

	* doc/how-constraints-works.txt: New file

	* src/boxes.c: Update documentation (I've done the main
	optimization now)

	* src/constraints.c: Rip lots of the documentation out and stick
	it in doc/how-constraints-works.txt while simultaneously removing
	the old and incorrect stuff and extending other parts

2005-11-15  Elijah Newren  <newren@gmail.com>

	Make meta_rectangle_find_onscreen_edges() robust against
	overlapping struts instead of just checking and throwing an error
	if they aren't.

	* src/boxes.c:

	(get_rect_minus_overlap):
	(replace_rect_with_list):
	(get_disjoint_strut_list_in_region):
	new functions

	(struts_are_disjoint):
	removed function

	(meta_rectangle_find_onscreen_edges):
	use get_disjoint_strut_list_in_region() to sanitize struts

2005-11-13  Elijah Newren  <newren@gmail.com>

	* src/window.c (meta_window_handle_mouse_grab_op_event): don't do
	a move or resize on ButtonRelease if the most recent move/resize
	was a snap event--snap move/resize users often release shift and
	the button at the same time and if shift happened to come first
	then it would previously result in a huge jarring movement of the
	window

2005-11-13  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt: update

	* src/display.c (apply_edge_snapping): if mouse snap-moving,
	require that the user move at least a threshold number of pixels
	before snapping in a given direction to make it easier to do snap
	movement in a single direction.

2005-11-13  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt: update

	* src/constraints.c (constraint_partially_onscreen): remove an old
	comment that no longer applies and is just misleading

	* src/common.h (enum MetaMenuOp):
	* src/core.c (meta_core_get_menu_accelerator):
	* src/menu.c (menuitems):
	* src/window.c (menu_callback):